Changed footer color

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -265,7 +265,7 @@ nav ul li a {
   font-size: 14px;
 }
 footer {
-  background-color: #b92c22;
+  background-color: #21513b;
   color: white;
   padding: 40px 5vw;
   font-weight: 300;
