--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,7 +2,8 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: "Pretendard", sans-serif;
+  font-family: "Pretendard", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, sans-serif; /* 폰트 폴백 추가 */
   background-color: #111;
   color: #eee;
   scroll-behavior: smooth;
