--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,7 +2,8 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: "Pretendard", sans-serif;
+  font-family: "Pretendard", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, sans-serif; /* 폰트 폴백 추가 */
   background-color: #111;
   color: #eee;
   scroll-behavior: smooth;
@@ -78,7 +79,7 @@ nav ul li a {
   z-index: 1;
 }
 .hero h1 {
-  font-size: 64px;
+  font-size: 75px;
   margin: 0;
   min-height: 80px;
   color: white;
